tests/errors/type_check/control_flow/branch_true_label_undefined.sim

        fn f(b: bool) {
            entry:
            branch(copy b) [true: nowhere, false: no]
            no:
            return
        }
        